<resources>
    <string name="app_name">ПлеерОК</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_playlists_button">ПЛЕЙЛИСТЫ</string>
    <string name="play_all_button">ИГРАТЬ ВСЕ</string>
    <string name="my_playlists_title">МОИ ПЛЕЙЛИСТЫ</string>
    <string name="no_songs_available_text">ПЕСЕН НЕТ СОВСЕМ</string>
    <string name="playlist_title">НАЗВАНИЕ ПЛЕЙЛИСТА</string>
    <string name="button_edit_playlist_text">РЕДАКТИРОВАТЬ</string>
    <string name="enter_playlists_title">Введите название плейлиста</string>
    <string name="done">ГОТОВО</string>
    <string name="save_playlist_button">СОХРАНИТЬ ПЛЕЙЛИСТ</string>
    <string name="choose_songs_from_the_list_text">Выберите песни из списка:</string>
    <string name="create_label_text">СОЗДАТЬ ЯРЛЫК</string>
    <string name="my_playlists">МОИ ПЛЕЙЛИСТЫ</string>
    <string name="new_playlist">НОВЫЙ ПЛЕЙЛИСТ</string>
    <string name="playlist_title_in_the_list">Название плейлиста</string>
    <string name="total_amount_of_songs">Всего песен:</string>
    <string name="existed_playlist_title">Название плейлиста</string>
    <string name="save_button">СОХРАНИТЬ</string>
    <string name="delete_button">УДАЛИТЬ</string>
</resources>