<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/basic_background_color"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/no_songs_available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_songs_available_text"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/all_songs_available"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@id/line_of_buttons"/>

    <LinearLayout
        android:id="@+id/line_of_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/fragment_container_view"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingVertical="5dp">

        <Button
            android:id="@+id/play_all_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/play_all_button"
            android:textStyle="bold"
            android:textColor="@color/basic_background_color"/>

        <Button
            android:id="@+id/playlists_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_playlists_button"
            android:textStyle="bold"
            android:textColor="@color/basic_background_color" />
    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        tools:name="com.example.playerok.NowPlayingFragment"/>

</RelativeLayout>